[gd_scene load_steps=7 format=3 uid="uid://bf8seevqu8v5m"]

[ext_resource type="Script" path="res://scenes/SearchScene.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Communicator.tscn" id="2"]
[ext_resource type="FontFile" path="res://assets/fonts/regular.tres" id="3"]
[ext_resource type="FontFile" path="res://assets/fonts/regular-big.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://yq5nlxffhsj6" path="res://scenes/SuccessScene.tscn" id="5_02p6d"]
[ext_resource type="PackedScene" uid="uid://bfpexmga5k1o2" path="res://scenes/FailureScene.tscn" id="6_nqfny"]

[node name="SearchScene" type="Node2D"]
script = ExtResource("1")

[node name="Communicator" parent="." instance=ExtResource("2")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 40.0
offset_bottom = 40.0

[node name="Heading" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "Αναζήτηση Ατόμων"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 600)
layout_mode = 2
columns = 2

[node name="LeftColumn" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(460, 400)
layout_mode = 2

[node name="RightColumn" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(460, 400)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/GridContainer/RightColumn"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
horizontal_alignment = 2
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1000, 50)
offset_top = 530.0
offset_right = 309.0
offset_bottom = 580.0
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonCatch" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
disabled = true
text = "Έκδοση απόφασης"

[node name="ButtonBack" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Επιστροφή στην προηγούμενη σελίδα"

[node name="PopupSuccess" type="Popup" parent="."]
initial_position = 1
size = Vector2i(500, 500)

[node name="SuccessScene" parent="PopupSuccess" instance=ExtResource("5_02p6d")]

[node name="PopupFailure" type="Popup" parent="."]
initial_position = 1
size = Vector2i(500, 500)

[node name="FailureScene" parent="PopupFailure" instance=ExtResource("6_nqfny")]

[node name="Lightbox" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(1020, 600)
offset_right = 1020.0
offset_bottom = 600.0
color = Color(0, 0, 0, 0.392157)

[connection signal="pressed" from="HBoxContainer/ButtonCatch" to="." method="_on_ButtonCatch_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="popup_hide" from="PopupSuccess" to="." method="_on_popup_success_popup_hide"]
[connection signal="popup_hide" from="PopupFailure" to="." method="_on_popup_failure_popup_hide"]
